--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 					<li>HTML</li>
 					<li>CSS</li>
 					<li>JavaScript</li>
+					<li>SQL</li>
 					<li>C/C++</li>
 					<li>XML</li>
 					<li>PHP</li>
