Add details and fix typos

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 				</p>
 				<ul>
 					<li>Develop a compact library to simplify repetitive tasks using lazy dependency evaluation</li>
+					<li>Adapt <code>make</code>-style automation to a Pythonic syntax and environment</li>
 				</ul>
 
 				<p>
@@ -105,30 +106,30 @@
 					<time>Jan 2012 - Oct 2012</time>
 				</p>
 				<ul>
-					<li>Explore various visual effects through experimentation with JavaScript and canvas elements</li>
+					<li>Explored various visual effects through experimentation with JavaScript and canvas elements</li>
+					<li>One demo featured as a Google Chrome Experiment for outstanding use of new web technologies</li>
 				</ul>
 			</div>
 
 			<h2>Experience</h2>
 			<div id="experience">
 				<p>
+					<strong>NSF REU / Research Assistant</strong>
+					&#8210; MapReduce and Distributed Systems
+					<time>Summer 2013 - Present</time>
+				</p>
+				<ul>
+					<li>Worked on a team to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of academic research</li>
+				</ul>
+
+				<p>
 					<strong>Course Assistant</strong>
 					&#8210; Data Structures and Algorithms
-					<time>Spring 2013, Fall 2013</time>
+					<time>Spring 2013 - Present</time>
 				</p>
 				<ul>
 					<li>Supervise, assist, and educate students during labs and office hours</li>
 					<li>Work closely with course instructor to develop automated grading programs</li>
-				</ul>
-
-				<p>
-					<strong>National Science Foundation REU</strong>
-					&#8210; MapReduce and Distributed Systems
-					<time>Summer 2013</time>
-
-				</p>
-				<ul>
-					<li>Worked on a team to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of academic research</li>
 				</ul>
 
 				<p>
