--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<time>Summer 2013 - Present</time>
 				</p>
 				<ul>
-					<li>Worked on a team to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of academic research</li>
+					<li>Worked on a team to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
 				</ul>
 
 				<p>
