Update resume for Spring 2014

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					Bachelor of Science: Computer Science
 					<time>expected May 2015</time>
 					<br>
-					<em>Cumulative: 3.65, Major: 3.93; Dean's List: Three semesters</em>
+					<em>Cumulative: 3.58, Major: 3.71; Dean's List: Three semesters</em>
 					<br>
 					<em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
 				</p>
@@ -52,7 +52,6 @@
 				</ul>
 				<ul>
 					<li>Linux/UNIX</li>
-					<li>Shell</li>
 					<li>Git</li>
 					<li>Make</li>
 					<li>Subversion</li>
@@ -70,8 +69,8 @@
 					<time>Sep 2013 - Present</time>
 				</p>
 				<ul>
-					<li>Collaboratively develop software to manage assignments, grades, and announcements</li>
-					<li>In use by courses at Binghamton University</li>
+					<li>Collaboratively developing software to manage assignments, grades, and announcements</li>
+					<li>Being used in courses at Binghamton University</li>
 				</ul>
 
 				<p>
@@ -82,20 +81,51 @@
 					<time>Sep 2013 - Present</time>
 				</p>
 				<ul>
-					<li>Create a programming contest server frontend to manage user registration and submissions</li>
-					<li>Collaborate on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
+					<li>Creating a programming contest server frontend to manage user registration and submissions</li>
+					<li>Collaborating on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
 				</ul>
 
 				<p>
 					<a href="https://pypi.python.org/pypi/bumpy">
 						<strong>Bumpy</strong>
-						<small>&#8210; pypi.python.org/pypi/bumpy</small>
+					</a>
+					/
+					<a href="https://pypi.python.org/pypi/steak">
+						<strong>Steak</strong>
+						<small>&#8210; pypi.python.org/pypi/bumpy / pypi.python.org/pypi/steak</small>
 					</a>
 					<time>Jul 2013 - Present</time>
 				</p>
 				<ul>
-					<li>Develop a compact library to simplify repetitive tasks using lazy dependency evaluation</li>
-					<li>Adapt <code>make</code>-style automation to a Pythonic syntax and environment</li>
+					<li>Developing compact libraries to simplify repetitive tasks using lazy dependency evaluation</li>
+					<li>Adapting Make-style task automation to a Pythonic syntax and environment</li>
+				</ul>
+
+				<p>
+					<a href="http://soofw.com">
+						<strong>soofw</strong>
+						<small>&#8210; soofw.com</small>
+					</a>
+					<time>Nov 2010 - Present</time>
+				</p>
+				<ul>
+					<li>Experiment, design, tinker, and muse about technology and other personal hobbies</li>
+				</ul>
+
+				<p>
+					<strong>Raspberry Pi Cluster</strong>
+					<time>January 2014</time>
+				</p>
+				<ul>
+					<li>Designed and built a custom enclosure for a small cluster of 7 Raspberry Pis in order to explore small scale distributed computing</li>
+				</ul>
+
+				<p>
+					<strong>Arduino Clocks</strong>
+					<time>January 2013</time>
+				</p>
+				<ul>
+					<li>Constructed two small wooden clocks using Arduinos that can communicate with a host computer, enabling media controls and support for notifications</li>
 				</ul>
 
 				<p>
@@ -119,17 +149,9 @@
 					<time>Summer 2013 - Present</time>
 				</p>
 				<ul>
-					<li>Work on a team to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
-				</ul>
-
-				<p>
-					<strong>Course Assistant</strong>
-					&#8210; Data Structures and Algorithms
-					<time>Spring 2013 - Present</time>
-				</p>
-				<ul>
-					<li>Supervise, assist, and educate students during labs and office hours</li>
-					<li>Work closely with course instructor to develop automated grading programs</li>
+					<li>Collaborating to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
+					<li>Researching new techniques for using SSDs during big data processing</li>
+					<li>Exploring new methods to simplify big data processing and analysis for scientists</li>
 				</ul>
 
 				<p>
@@ -164,6 +186,16 @@
 						</a>
 						<time>Jan 2005 - Present</time>
 					</li>
+				</ul>
+
+				<p>
+					<strong>Course Assistant</strong>
+					&#8210; Data Structures and Algorithms
+					<time>Spring 2013 - Fall 2013</time>
+				</p>
+				<ul>
+					<li>Supervised, assisted, and educated students during labs and office hours</li>
+					<li>Worked closely with course instructor to develop automated grading programs</li>
 				</ul>
 			</div>
 		</div>
