Update GPA after Spring 2014

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					Bachelor of Science: Computer Science
 					<time>expected May 2015</time>
 					<br>
-					<em>Cumulative: 3.58, Major: 3.71; Dean's List: Three semesters</em>
+					<em>Cumulative: 3.64, Major: 3.76; Dean's List: Four semesters</em>
 					<br>
 					<em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
 				</p>
