All sorts of fun resume updates

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					Bachelor of Science: Computer Science
 					<time>expected May 2015</time>
 					<br>
-					<em>Cumulative: 3.64, Major: 3.76; Dean's List: Four semesters</em>
+					<em>Cumulative: 3.56, Major: 3.76; Dean's List: four semesters</em>
 					<br>
 					<em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
 				</p>
@@ -39,66 +39,41 @@
 			<div id="skills">
 				<ul>
 					<li>Python</li>
-					<li>Bash</li>
-					<li>Java</li>
-					<li>HTML</li>
-					<li>CSS</li>
 					<li>JavaScript</li>
-					<li>SQL</li>
-					<li>C/C++</li>
-					<li>XML</li>
 					<li>PHP</li>
 					<li>Lua</li>
+					<li>&nbsp;</li>
+					<li>Java</li>
+					<li>C</li>
+					<li>C++</li>
+					<li>Rust</li>
+					<li>Nim</li>
+					<li>&nbsp;</li>
+					<li>HTML</li>
+					<li>CSS</li>
 				</ul>
 				<ul>
 					<li>Linux/UNIX</li>
+					<li>Bash</li>
 					<li>Git</li>
 					<li>Make</li>
-					<li>Subversion</li>
 					<li>GDB</li>
+					<li>&nbsp;</li>
+					<li>JSON</li>
+					<li>SQL</li>
+					<li>XML</li>
+					<li>YAML</li>
 				</ul>
 			</div>
 
 			<h2>Projects</h2>
 			<div id="projects">
 				<p>
-					<a href="https://github.com/xtfc/pyboard2">
-						<strong>Pyboard</strong>
-						<small>&#8210; github.com/xtfc/pyboard2</small>
-					</a>
-					<time>Sep 2013 - Present</time>
+					<strong>Leap Motion projects</strong>
+					<time>Sep 2014 - Present</time>
 				</p>
 				<ul>
-					<li>Collaboratively developing software to manage assignments, grades, and announcements</li>
-					<li>Being used in courses at Binghamton University</li>
-				</ul>
-
-				<p>
-					<a href="https://github.com/xtfc/compytition">
-						<strong>Compytition</strong>
-						<small>&#8210; github.com/xtfc/compytition</small>
-					</a>
-					<time>Sep 2013 - Present</time>
-				</p>
-				<ul>
-					<li>Creating a programming contest server frontend to manage user registration and submissions</li>
-					<li>Collaborating on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
-				</ul>
-
-				<p>
-					<a href="https://pypi.python.org/pypi/bumpy">
-						<strong>Bumpy</strong>
-					</a>
-					/
-					<a href="https://pypi.python.org/pypi/steak">
-						<strong>Steak</strong>
-						<small>&#8210; pypi.python.org/pypi/bumpy / pypi.python.org/pypi/steak</small>
-					</a>
-					<time>Jul 2013 - Present</time>
-				</p>
-				<ul>
-					<li>Developing compact libraries to simplify repetitive tasks using lazy dependency evaluation</li>
-					<li>Adapting Make-style task automation to a Pythonic syntax and environment</li>
+					<li>Experiment with the Leap Motion API to create gesture-based control interfaces for computer interaction, Philips Hue lighting systems, and multimedia controls</li>
 				</ul>
 
 				<p>
@@ -118,6 +93,55 @@
 				</p>
 				<ul>
 					<li>Designed and built a custom enclosure for a small cluster of 7 Raspberry Pis in order to explore small scale distributed computing</li>
+				</ul>
+
+				<p>
+					<strong>PyDS</strong>
+					<time>December 2013</time>
+				</p>
+				<ul>
+					<li>Created a minimal distributed computing framework to conduct small personal experiments and acquire a better understanding of distributed systems
+					</li>
+				</ul>
+
+				<p>
+					<a href="https://github.com/xtfc/pyboard2">
+						<strong>Pyboard</strong>
+						<small>&#8210; github.com/xtfc/pyboard2</small>
+					</a>
+					<time>Sep 2013 - Oct 2013</time>
+				</p>
+				<ul>
+					<li>Collaboratively developed software to manage assignments, grades, and announcements</li>
+					<li>Being used in courses at Binghamton University</li>
+				</ul>
+
+				<p>
+					<a href="https://github.com/xtfc/compytition">
+						<strong>Compytition</strong>
+						<small>&#8210; github.com/xtfc/compytition</small>
+					</a>
+					<time>Sep 2013 - Oct 2013</time>
+				</p>
+				<ul>
+					<li>Created a programming contest server frontend to manage user registration and submissions</li>
+					<li>Collaborated on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
+				</ul>
+
+				<p>
+					<a href="https://pypi.python.org/pypi/bumpy">
+						<strong>Bumpy</strong>
+					</a>
+					/
+					<a href="https://pypi.python.org/pypi/steak">
+						<strong>Steak</strong>
+						<small>&#8210; pypi.python.org/pypi/bumpy / pypi.python.org/pypi/steak</small>
+					</a>
+					<time>Jul 2013 - Dec 2013</time>
+				</p>
+				<ul>
+					<li>Developed compact libraries to simplify repetitive tasks using lazy dependency evaluation</li>
+					<li>Adapted Make-style task automation to a Pythonic syntax and environment</li>
 				</ul>
 
 				<p>
@@ -155,6 +179,16 @@
 				</ul>
 
 				<p>
+					<strong>Course Assistant</strong>
+					&#8210; Data Structures and Algorithms; Intro to OO Programming
+					<time>Spring 2013 - Present</time>
+				</p>
+				<ul>
+					<li>Supervised, assisted, and educated students during labs and office hours</li>
+					<li>Worked closely with course instructor to develop automated grading programs</li>
+				</ul>
+
+				<p>
 					<strong>Web Design / Programming</strong>
 				</p>
 				<ul>
@@ -186,16 +220,6 @@
 						</a>
 						<time>Jan 2005 - Present</time>
 					</li>
-				</ul>
-
-				<p>
-					<strong>Course Assistant</strong>
-					&#8210; Data Structures and Algorithms
-					<time>Spring 2013 - Fall 2013</time>
-				</p>
-				<ul>
-					<li>Supervised, assisted, and educated students during labs and office hours</li>
-					<li>Worked closely with course instructor to develop automated grading programs</li>
 				</ul>
 			</div>
 		</div>
