Update GPA for bachelor's

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					<strong>Binghamton University</strong>, State University of New York
 					<br>
 					Bachelor of Science: Computer Science
-					<time>expected May 2015</time>
+					<time>May 2015</time>
 					<br>
-					<em>Cumulative: 3.56, Major: 3.76; Dean's List: four semesters</em>
+					<em>Cumulative: 3.62, Major: 3.79; Dean's List: five semesters</em>
 					<br>
 					<em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
 				</p>
