Add expected Master's
Also close CA and RA positions

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <p>
           <strong>Binghamton University</strong>, State University of New York
           <br>
+          Master of Science: Computer Science
+          <time>expected May 2017</time>
+          <br><br>
           Bachelor of Science: Computer Science
           <time>May 2015</time>
           <br>
-          <em>Cumulative: 3.62, Major: 3.79; Dean's List: five semesters</em>
+          <em>Cumulative: 3.62, major: 3.79; Dean's List: five semesters</em>
           <br>
           <em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
         </p>
@@ -170,7 +173,7 @@
         <p>
           <strong>NSF REU / Research Assistant</strong>
           &#8210; MapReduce and Distributed Systems
-          <time>Summer 2013 - Present</time>
+          <time>Summer 2013 - Spring 2015</time>
         </p>
         <ul>
           <li>Collaborating to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
@@ -181,7 +184,7 @@
         <p>
           <strong>Course Assistant</strong>
           &#8210; Data Structures and Algorithms; Intro to OO Programming
-          <time>Spring 2013 - Present</time>
+          <time>Spring 2013 - Spring 2015</time>
         </p>
         <ul>
           <li>Supervised, assisted, and educated students during labs and office hours</li>
