Change nbsp to pipes in skills

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
           <li>JavaScript</li>
           <li>PHP</li>
           <li>Lua</li>
-          <li>&nbsp;</li>
+          <li>|</li>
           <li>Java</li>
           <li>C</li>
           <li>C++</li>
+          <li>Haskell</li>
           <li>Rust</li>
           <li>Nim</li>
-          <li>&nbsp;</li>
+          <li>|</li>
           <li>HTML</li>
           <li>CSS</li>
         </ul>
@@ -61,7 +62,7 @@
           <li>Git</li>
           <li>Make</li>
           <li>GDB</li>
-          <li>&nbsp;</li>
+          <li>|</li>
           <li>JSON</li>
           <li>SQL</li>
           <li>XML</li>
