Remove months from years

--- a/index.html
+++ b/index.html
@@ -73,27 +73,27 @@
       <h2>Projects</h2>
       <div id="projects">
         <p>
-          <strong>Leap Motion projects</strong>
-          <time>Sep 2014 - Present</time>
-        </p>
-        <ul>
-          <li>Experiment with the Leap Motion API to create gesture-based control interfaces for computer interaction, Philips Hue lighting systems, and multimedia controls</li>
-        </ul>
-
-        <p>
           <a href="http://soofw.com">
             <strong>soofw</strong>
             <small>&#8210; soofw.com</small>
           </a>
-          <time>Nov 2010 - Present</time>
+          <time>2010 - present</time>
         </p>
         <ul>
           <li>Experiment, design, tinker, and muse about technology and other personal hobbies</li>
         </ul>
 
         <p>
+          <strong>Leap Motion projects</strong>
+          <time>2014</time>
+        </p>
+        <ul>
+          <li>Experiment with the Leap Motion API to create gesture-based control interfaces for computer interaction, Philips Hue lighting systems, and multimedia controls</li>
+        </ul>
+
+        <p>
           <strong>Raspberry Pi Cluster</strong>
-          <time>January 2014</time>
+          <time>2014</time>
         </p>
         <ul>
           <li>Designed and built a custom enclosure for a small cluster of 7 Raspberry Pis in order to explore small scale distributed computing</li>
@@ -101,7 +101,7 @@
 
         <p>
           <strong>PyDS</strong>
-          <time>December 2013</time>
+          <time>2013</time>
         </p>
         <ul>
           <li>Created a minimal distributed computing framework to conduct small personal experiments and acquire a better understanding of distributed systems
@@ -113,23 +113,11 @@
             <strong>Pyboard</strong>
             <small>&#8210; github.com/xtfc/pyboard2</small>
           </a>
-          <time>Sep 2013 - Oct 2013</time>
+          <time>2013</time>
         </p>
         <ul>
           <li>Collaboratively developed software to manage assignments, grades, and announcements</li>
           <li>Being used in courses at Binghamton University</li>
-        </ul>
-
-        <p>
-          <a href="https://github.com/xtfc/compytition">
-            <strong>Compytition</strong>
-            <small>&#8210; github.com/xtfc/compytition</small>
-          </a>
-          <time>Sep 2013 - Oct 2013</time>
-        </p>
-        <ul>
-          <li>Created a programming contest server frontend to manage user registration and submissions</li>
-          <li>Collaborated on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
         </ul>
 
         <p>
@@ -141,7 +129,7 @@
             <strong>Steak</strong>
             <small>&#8210; pypi.python.org/pypi/bumpy / pypi.python.org/pypi/steak</small>
           </a>
-          <time>Jul 2013 - Dec 2013</time>
+          <time>2013</time>
         </p>
         <ul>
           <li>Developed compact libraries to simplify repetitive tasks using lazy dependency evaluation</li>
@@ -149,11 +137,23 @@
         </ul>
 
         <p>
-          <strong>Arduino Clocks</strong>
-          <time>January 2013</time>
+          <a href="https://github.com/xtfc/compytition">
+            <strong>Compytition</strong>
+            <small>&#8210; github.com/xtfc/compytition</small>
+          </a>
+          <time>2013</time>
         </p>
         <ul>
-          <li>Constructed two small wooden clocks using Arduinos that can communicate with a host computer, enabling media controls and support for notifications</li>
+          <li>Created a programming contest server frontend to manage user registration and submissions</li>
+          <li>Collaborated on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
+        </ul>
+
+        <p>
+          <strong>Arduino Clocks</strong>
+          <time>2013</time>
+        </p>
+        <ul>
+          <li>Constructed two small wooden clocks powered by Arduinos that can communicate with a host computer, enabling media controls and support for notifications</li>
         </ul>
 
         <p>
@@ -161,7 +161,7 @@
             <strong>JavaScript and HTML5 Canvas Demos</strong>
             <small>&#8210; soofw.com/demos</small>
           </a>
-          <time>Jan 2012 - Oct 2012</time>
+          <time>2012</time>
         </p>
         <ul>
           <li>Explored various visual effects through experimentation with JavaScript and canvas elements</li>
@@ -185,11 +185,22 @@
         <p>
           <strong>Course Assistant</strong>
           &#8210; Data Structures and Algorithms; Intro to OO Programming
-          <time>Spring 2013 - Spring 2015</time>
+          <time>2013 - 2015</time>
         </p>
         <ul>
           <li>Supervised, assisted, and educated students during labs and office hours</li>
           <li>Worked closely with course instructor to develop automated grading programs</li>
+        </ul>
+
+        <p>
+          <strong>NSF REU / Research Assistant</strong>
+          &#8210; MapReduce and Distributed Systems
+          <time>2013 - 2015</time>
+        </p>
+        <ul>
+          <li>Collaborating to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
+          <li>Researching new techniques for using SSDs during big data processing</li>
+          <li>Exploring new methods to simplify big data processing and analysis for scientists</li>
         </ul>
 
         <p>
@@ -201,28 +212,28 @@
               Pip's Boutique
               <small>&#8210; pipsboutique.com</small>
             </a>
-            <time>Feb 2013 - Present</time>
+            <time>2013 - present</time>
           </li>
           <li>
             <a href="http://underwatertigermusic.com">
               Underwater Tiger
               <small>&#8210; underwatertigermusic.com</small>
             </a>
-            <time>Nov 2011 - Present</time>
+            <time>2011 - present</time>
           </li>
           <li>
             <a href="http://marketstreetapothecary.com">
               Market Street Apothecary
               <small>&#8210; marketstreetapothecary.com</small>
             </a>
-            <time>Jul 2010 - Present</time>
+            <time>2010 - present</time>
           </li>
           <li>
             <a href="http://marketstreetcoffeeandtea.com">
               Market Street Coffee &amp; Tea
               <small>&#8210; marketstreetcoffeeandtea.com</small>
             </a>
-            <time>Jan 2005 - Present</time>
+            <time>2005 - present</time>
           </li>
         </ul>
       </div>
