--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@
       <h2>Experience</h2>
       <div id="experience">
         <p>
-          <strong>NSF REU / Research Assistant</strong>
-          &#8210; MapReduce and Distributed Systems
-          <time>Summer 2013 - Spring 2015</time>
+          <strong>Teaching Assistant</strong>
+          &#8210; Intro to OO Programming
+          <time>2015 - 2016</time>
         </p>
         <ul>
-          <li>Collaborating to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
-          <li>Researching new techniques for using SSDs during big data processing</li>
-          <li>Exploring new methods to simplify big data processing and analysis for scientists</li>
+          <li>To be continued...</li>
         </ul>
 
         <p>
