Update general content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <time>expected May 2017</time>
           <br><br>
           Bachelor of Science: Computer Science
-          <time>May 2015</time>
+          <time>2015</time>
           <br>
           <em>Cumulative: 3.62, major: 3.79; Dean's List: five semesters</em>
           <br>
@@ -38,6 +38,7 @@
         </p>
       </div>
 
+      <!--
       <h2><span>Skills</span></h2>
       <div id="skills">
         <ul>
@@ -69,33 +70,48 @@
           <li>YAML</li>
         </ul>
       </div>
+      -->
 
       <h2><span>Projects</span></h2>
       <div id="projects">
         <p>
-          <a href="http://soofw.com">
-            <strong>soofw</strong>
-            <small>&#8210; soofw.com</small>
+          <strong>Mask</strong>
+          <time>present</time>
+        </p>
+        <ul>
+          <li>Designing, implementing, and experimenting with a new programming language</li>
+          <li>Writing lexer, parser, and compiler in Python to translate Mask source code to LLVM IR</li>
+        </ul>
+
+        <p>
+          <a href="https://github.com/philipdexter/vx">
+            <strong>vx</strong>
+            <small>&#8210; github.com/philipdexter/vx</small>
           </a>
-          <time>2010 - present</time>
         </p>
         <ul>
-          <li>Experiment, design, tinker, and muse about technology and other personal hobbies</li>
+          <li>Created original idea for the design of a terminal-based text editor</li>
+          <li>Contributing to the API structure and development</li>
+          <li>Providing code review and feedback for primary developer</li>
         </ul>
 
         <p>
-          <strong>Leap Motion projects</strong>
-          <time>2014</time>
+          <strong>Home assistant</strong>
+          <time>2015</time>
         </p>
         <ul>
-          <li>Experiment with the Leap Motion API to create gesture-based control interfaces for computer interaction, Philips Hue lighting systems, and multimedia controls</li>
+          <li>Integrated several systems to create an automated home assistant</li>
+          <li>Uses an always-on microphone, Leap Motion, and Android phone sensors to accept voice, gesture, and automated commands</li>
+          <li>Supports multimedia controls, computer interaction, and Philips Hue light controls</li>
         </ul>
 
         <p>
-          <strong>Raspberry Pi Cluster</strong>
+          <strong>Physical design / woodworking</strong>
         </p>
         <ul>
-          <li>Designed and built a custom enclosure for a small cluster of 7 Raspberry Pis in order to explore small scale distributed computing</li>
+          <li>Designed and built computer desks, clocks, boxes, gifts, and a coffee table</li>
+          <lI>Integrated Arduino microcontrollers with LEDs / displays / inputs into several projects</li>
+          <li>Made a custom enclosure for a small Raspberry Pi cluster</li>
         </ul>
 
         <p>
@@ -103,8 +119,7 @@
           <time>2013</time>
         </p>
         <ul>
-          <li>Created a minimal distributed computing framework to conduct small personal experiments and acquire a better understanding of distributed systems
-          </li>
+          <li>Created a minimal distributed computing framework to conduct small personal experiments and acquire a better understanding of distributed systems</li>
         </ul>
 
         <p>
@@ -115,7 +130,7 @@
         </p>
         <ul>
           <li>Collaboratively developed software to manage assignments, grades, and announcements</li>
-          <li>Being used in courses at Binghamton University</li>
+          <li>Used for several semesters at Binghamton University</li>
         </ul>
 
         <p>
@@ -145,15 +160,8 @@
         </ul>
 
         <p>
-          <strong>Arduino Clocks</strong>
-        </p>
-        <ul>
-          <li>Constructed two small wooden clocks powered by Arduinos that can communicate with a host computer, enabling media controls and support for notifications</li>
-        </ul>
-
-        <p>
           <a href="http://soofw.com/demos">
-            <strong>JavaScript and HTML5 Canvas Demos</strong>
+            <strong>JavaScript and HTML5 canvas demos</strong>
             <small>&#8210; soofw.com/demos</small>
           </a>
           <time>2012</time>
@@ -167,17 +175,27 @@
       <h2><span>Experience</span></h2>
       <div id="experience">
         <p>
-          <strong>Teaching Assistant</strong>
-          &#8210; Intro to OO Programming
-          <time>2015 - 2016</time>
+          <strong>Graduate Teaching Assistant</strong>
+          &#8210; Intro to OOP; Intro to Design Patterns
+          <time>2015</time>
         </p>
         <ul>
-          <li>To be continued...</li>
+          <li>Assisted and taught students during office hours</li>
+          <li>Discussed and graded student projects with them during demo appointments</li>
         </ul>
 
         <p>
-          <strong>Course Assistant</strong>
-          &#8210; Data Structures and Algorithms; Intro to OO Programming
+          <strong>Google Summer of Code</strong>
+          &#8210; Apache Airavata
+          <time>2015</time>
+        </p>
+        <ul>
+          <li>Designed and worked towards a prediction system to estimate task duration</li>
+        </ul>
+
+        <p>
+          <strong>Undergraduate Course Assistant</strong>
+          &#8210; Data Structures / Algorithms; Intro to OOP
           <time>2013 - 2015</time>
         </p>
         <ul>
@@ -215,18 +233,18 @@
             <time>2011 - present</time>
           </li>
           <li>
-            <a href="http://marketstreetapothecary.com">
-              Market Street Apothecary
-              <small>&#8210; marketstreetapothecary.com</small>
-            </a>
-            <time>2010 - present</time>
-          </li>
-          <li>
             <a href="http://marketstreetcoffeeandtea.com">
               Market Street Coffee &amp; Tea
               <small>&#8210; marketstreetcoffeeandtea.com</small>
             </a>
             <time>2005 - present</time>
+          </li>
+          <li>
+            <a href="http://marketstreetapothecary.com">
+              Market Street Apothecary
+              <small>&#8210; marketstreetapothecary.com</small>
+            </a>
+            <time>2010</time>
           </li>
         </ul>
       </div>
