--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>John R. Weachock</title>
-    <link rel="stylesheet" href="fonts.css" type="text/css"/>
-    <link rel="stylesheet" href="main.css" type="text/css"/>
+    <link rel="stylesheet" href="/resume/fonts.css" type="text/css"/>
+    <link rel="stylesheet" href="/resume/main.css" type="text/css"/>
   </head>
   <body>
     <div id="container">
@@ -34,142 +34,93 @@
           <br>
           <em>Cumulative: 3.62, major: 3.79; Dean's List: five semesters</em>
           <br>
-          <em>Upsilon Pi Epsilon, Assocation for Computing Machinery, Phi Eta Sigma</em>
+          <em>Upsilon Pi Epsilon Honor Society, Phi Eta Sigma Honor Society</em>
         </p>
       </div>
 
-      <!--
       <h2><span>Skills</span></h2>
       <div id="skills">
         <ul>
+          <li><strong>Languages</strong></li>
+
           <li>Python</li>
-          <li>JavaScript</li>
-          <li>PHP</li>
-          <li>Lua</li>
-          <li>|</li>
           <li>Java</li>
+
+          <li>JavaScript</li>
+
+          <li>HTML</li>
+          <li>CSS</li>
+
           <li>C</li>
           <li>C++</li>
+
           <li>Haskell</li>
           <li>Rust</li>
           <li>Nim</li>
-          <li>|</li>
-          <li>HTML</li>
-          <li>CSS</li>
+          <li>Julia</li>
         </ul>
         <ul>
-          <li>Linux/UNIX</li>
-          <li>Bash</li>
+          <li><strong>Tools</strong></li>
+
           <li>Git</li>
+          <li>Linux/UNIX</li>
+          <li>Shell</li>
+
           <li>Make</li>
           <li>GDB</li>
-          <li>|</li>
+
           <li>JSON</li>
           <li>SQL</li>
           <li>XML</li>
           <li>YAML</li>
         </ul>
       </div>
-      -->
 
       <h2><span>Projects</span></h2>
       <div id="projects">
         <p>
           <strong>Mask</strong>
+          &#8210; programming language
           <time>present</time>
         </p>
         <ul>
-          <li>Designing, implementing, and experimenting with a new programming language</li>
-          <li>Writing lexer, parser, and compiler in Python to translate Mask source code to LLVM IR</li>
+          <li>Create, design, and implement my own programming language with a colleague</li>
+          <li>Write lexer, parser, and compiler in Python to translate Mask source code to LLVM IR</li>
         </ul>
 
         <p>
           <a href="https://github.com/philipdexter/vx">
             <strong>vx</strong>
+            &#8210; text editor
             <small>&#8210; github.com/philipdexter/vx</small>
           </a>
+          <time>present</time>
         </p>
         <ul>
-          <li>Created original idea for the design of a terminal-based text editor</li>
-          <li>Contributing to the API structure and development</li>
-          <li>Providing code review and feedback for primary developer</li>
+          <li>Conceived original idea for the design of a terminal-based text editor</li>
+          <li>Contribute to the API structure and development</li>
         </ul>
 
         <p>
-          <strong>Home assistant</strong>
+          <strong>Automated home assistant</strong>
           <time>2015</time>
         </p>
         <ul>
-          <li>Integrated several systems to create an automated home assistant</li>
           <li>Uses an always-on microphone, Leap Motion, and Android phone sensors to accept voice, gesture, and automated commands</li>
           <li>Supports multimedia controls, computer interaction, and Philips Hue light controls</li>
         </ul>
 
         <p>
-          <strong>Physical design / woodworking</strong>
+          <a href="https://github.com/scizzorz">
+            <strong>Other</strong>
+            <small>&#8210; github.com/scizzorz</small>
+          </a>
+          <time>2012 - 2015</time>
         </p>
         <ul>
-          <li>Designed and built computer desks, clocks, boxes, gifts, and a coffee table</li>
-          <lI>Integrated Arduino microcontrollers with LEDs / displays / inputs into several projects</li>
-          <li>Made a custom enclosure for a small Raspberry Pi cluster</li>
+          <li>Experiment and implement various small projects to explore different areas of computing</li>
         </ul>
 
-        <p>
-          <strong>PyDS</strong>
-          <time>2013</time>
-        </p>
-        <ul>
-          <li>Created a minimal distributed computing framework to conduct small personal experiments and acquire a better understanding of distributed systems</li>
-        </ul>
-
-        <p>
-          <a href="https://github.com/xtfc/pyboard2">
-            <strong>Pyboard</strong>
-            <small>&#8210; github.com/xtfc/pyboard2</small>
-          </a>
-        </p>
-        <ul>
-          <li>Collaboratively developed software to manage assignments, grades, and announcements</li>
-          <li>Used for several semesters at Binghamton University</li>
-        </ul>
-
-        <p>
-          <a href="https://pypi.python.org/pypi/bumpy">
-            <strong>Bumpy</strong>
-          </a>
-          /
-          <a href="https://pypi.python.org/pypi/steak">
-            <strong>Steak</strong>
-            <small>&#8210; pypi.python.org/pypi/bumpy / pypi.python.org/pypi/steak</small>
-          </a>
-        </p>
-        <ul>
-          <li>Developed compact libraries to simplify repetitive tasks using lazy dependency evaluation</li>
-          <li>Adapted Make-style task automation to a Pythonic syntax and environment</li>
-        </ul>
-
-        <p>
-          <a href="https://github.com/xtfc/compytition">
-            <strong>Compytition</strong>
-            <small>&#8210; github.com/xtfc/compytition</small>
-          </a>
-        </p>
-        <ul>
-          <li>Created a programming contest server frontend to manage user registration and submissions</li>
-          <li>Collaborated on a design to enable interfacing with an automatic grading and reporting system with modular support for multiple programming languages</li>
-        </ul>
-
-        <p>
-          <a href="http://soofw.com/demos">
-            <strong>JavaScript and HTML5 canvas demos</strong>
-            <small>&#8210; soofw.com/demos</small>
-          </a>
-          <time>2012</time>
-        </p>
-        <ul>
-          <li>Explored various visual effects through experimentation with JavaScript and canvas elements</li>
-          <li>One demo featured as a Google Chrome Experiment for outstanding use of new web technologies</li>
-        </ul>
       </div>
 
       <h2><span>Experience</span></h2>
@@ -180,8 +131,7 @@
           <time>2015</time>
         </p>
         <ul>
-          <li>Assisted and taught students during office hours</li>
-          <li>Discussed and graded student projects with them during demo appointments</li>
+          <li>Taught and assisted students to further their understanding of course concepts</li>
         </ul>
 
         <p>
@@ -190,7 +140,8 @@
           <time>2015</time>
         </p>
         <ul>
-          <li>Designed and worked towards a prediction system to estimate task duration</li>
+          <li>Worked remotely with a team to design a prediction system to estimate task duration</li>
+          <li>Used machine learning and historic execution data to provide scientists with information about tasks</li>
         </ul>
 
         <p>
@@ -209,13 +160,13 @@
           <time>2013 - 2015</time>
         </p>
         <ul>
-          <li>Collaborating to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
-          <li>Researching new techniques for using SSDs during big data processing</li>
-          <li>Exploring new methods to simplify big data processing and analysis for scientists</li>
+          <li>Collaborated to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
+          <li>Researched new techniques for using SSDs during big data processing</li>
+          <li>Explored new methods to simplify big data processing and analysis for scientists</li>
         </ul>
 
         <p>
-          <strong>Web Design / Programming</strong>
+          <strong>Web Development</strong>
         </p>
         <ul>
           <li>
