--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Bachelor of Science: Computer Science
           <time>2015</time>
           <br>
-          <em>Cumulative: 3.62, major: 3.79; Dean's List: five semesters</em>
+          <em>Major: 3.79, cumulative: 3.62; Dean's List: five semesters</em>
           <br>
           <em>Upsilon Pi Epsilon Honor Society, Phi Eta Sigma Honor Society</em>
         </p>
