Fix width on skill labels

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2><span>Skills</span></h2>
       <div id="skills">
         <ul>
-          <li><strong>Languages</strong></li>
+          <li class="strong">Languages</li>
 
           <li>Python</li>
           <li>Java</li>
@@ -60,7 +60,7 @@
           <li>Julia</li>
         </ul>
         <ul>
-          <li><strong>Tools</strong></li>
+          <li class="strong">Tools</li>
 
           <li>Git</li>
           <li>Linux/UNIX</li>
